--- a/index.html
+++ b/index.html
@@ -226,6 +226,13 @@
             <button onclick="downloadCalendar()" class="calendar-button">
                 📅 Add to Calendar
             </button>
+            <div style="margin-top: 15px;">
+                <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=BBQ%20Chicken%20Meal%20Pickup&dates=20250927T180000Z/20250927T220000Z&details=Pick%20up%20your%20BBQ%20Chicken%20Meal%20at%20Fade%20Zone%20Barbershop.%20Contact%20Barber%20for%20questions.%20REMINDER%3A%20Set%20additional%20reminders%20for%2024%20hours%20and%201%20hour%20before%20pickup.&location=129-02%20Liberty%20Ave%2C%20South%20Richmond%20Hill%2C%20NY" 
+                   target="_blank" 
+                   style="color: #ffd700; text-decoration: underline; font-size: 0.9em;">
+                    Or click here for Google Calendar
+                </a>
+            </div>
         </div>
         
         <div style="margin-top: 25px; font-size: 0.9em; opacity: 0.8;">
@@ -263,6 +270,7 @@ END:VCALENDAR`;
             const a = document.createElement('a');
             a.href = url;
             a.download = 'bbq-pickup.ics';
+            a.setAttribute('type', 'text/calendar');
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
