--- a/index.html
+++ b/index.html
@@ -223,9 +223,12 @@
         </div>
         
         <div class="button-container">
-            <button onclick="addToCalendar()" class="calendar-button" id="calendarButton">
+            <a href="https://raw.githubusercontent.com/srahaman1/bqq-calendar-page/main/bbq-pickup.ics" 
+               download="bbq-pickup.ics" 
+               class="calendar-button" 
+               style="display: inline-block; text-decoration: none; text-align: center;">
                 📅 Add to Calendar
-            </button>
+            </a>
             <div style="margin-top: 15px;" id="fallbackLink">
                 <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=BBQ%20Chicken%20Meal%20Pickup&dates=20250927T180000Z/20250927T220000Z&details=Pick%20up%20your%20BBQ%20Chicken%20Meal%20at%20Fade%20Zone%20Barbershop.%20Contact%20Barber%20for%20questions.%20REMINDER%3A%20Set%20additional%20reminders%20for%2024%20hours%20and%201%20hour%20before%20pickup.&location=129-02%20Liberty%20Ave%2C%20South%20Richmond%20Hill%2C%20NY" 
                    target="_blank" 
