added https to force download

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
             <a href="https://raw.githubusercontent.com/srahaman1/bbq-calendar-page/main/bbq-pickup.ics" 
                download="bbq-pickup.ics" 
                class="calendar-button" 
-               style="display: inline-block; text-decoration: none; text-align: center;">
+               style="display: inline-block; text-decoration: none; text-align: center;"
+               onclick="setTimeout(function(){alert('Calendar file downloaded! Look for bbq-pickup.ics in your downloads and open it with your calendar app.');}, 1000);">
                 📅 Add to Calendar
             </a>
             <div style="margin-top: 15px;" id="fallbackLink">
