--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
         
         <div class="calendar-buttons">
-            <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=BBQ%20Chicken%20Meal%20Pickup&dates=20250920T180000Z/20250920T220000Z&details=Pick%20up%20your%20BBQ%20Chicken%20Meal%20at%20Fade%20Zone%20Barbershop.%20Contact%20Barber%20for%20questions.%20REMINDER:%20Bring%20your%20ticket!&location=129-02%20Liberty%20Ave,%20South%20Richmond%20Hill,%20NY" 
+            <a href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=NDRqYmMxNW5scGw3MjZsNGo4czQ3YWJwdmkgc2hvYWlieHJhQG0&tmsrc=shoaibxra%40gmail.com" 
                target="_blank" 
                class="platform-button android-button">
                 📱 Android - Add to Calendar
