--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
         
         <div class="calendar-buttons">
-            <a href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=NDRqYmMxNW5scGw3MjZsNGo4czQ3YWJwdmkgc2hvYWlieHJhQG0&tmsrc=shoaibxra%40gmail.com" 
+            <a href="https://calendar.app.google/6ugES7XZ6wpkiE6Z8" 
                target="_blank" 
                class="platform-button android-button">
                 📱 Android - Add to Calendar
