--- a/index.html
+++ b/index.html
@@ -239,24 +239,47 @@
     </div>
 
     <script>
-        function openGoogleCalendar() {
-            // Detect if user is on mobile
-            const isMobile = /Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        function downloadAndroidICS() {
+            // Generate DTSTAMP with current timestamp
+            const now = new Date().toISOString().replace(/[-:]/g, '').replace(/\.\d{3}Z$/, 'Z');
             
-            if (isMobile) {
-                // Mobile-friendly Google Calendar template URL with all details specified
-                const mobileUrl = "https://calendar.google.com/calendar/render?action=TEMPLATE" +
-                    "&text=" + encodeURIComponent("BBQ Chicken Meal Pickup") +
-                    "&dates=20250920T180000Z/20250920T220000Z" +
-                    "&details=" + encodeURIComponent("Pick up your BBQ Chicken Meal at Fade Zone Barbershop. Contact Barber for questions. REMINDER: Bring your ticket!") +
-                    "&location=" + encodeURIComponent("Fade Zone Barbershop, 129-02 Liberty Ave, South Richmond Hill, NY") +
-                    "&reminder=1440&reminder=60";
-                window.open(mobileUrl, '_blank');
-            } else {
-                // Desktop - use the template ID version that includes reminders
-                const desktopUrl = "https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=NDRqYmMxNW5scGw3MjZsNGo4czQ3YWJwdmkgc2hvYWlieHJhQG0&tmsrc=shoaibxra%40gmail.com";
-                window.open(desktopUrl, '_blank');
-            }
+            const calendarData = `BEGIN:VCALENDAR
+VERSION:2.0
+PRODID:-//BBQ Pickup//EN
+BEGIN:VEVENT
+UID:bbq-pickup-android-20250920@fadezone.com
+DTSTAMP:${now}
+DTSTART:20250920T180000Z
+DTEND:20250920T220000Z
+SUMMARY:BBQ Chicken Meal Pickup
+DESCRIPTION:Pick up your BBQ Chicken Meal at Fade Zone Barbershop. Contact Barber for questions. REMINDER: Bring your ticket!
+LOCATION:Fade Zone Barbershop, 129-02 Liberty Ave, South Richmond Hill, NY
+BEGIN:VALARM
+TRIGGER:-P1D
+ACTION:DISPLAY
+DESCRIPTION:BBQ pickup tomorrow 2-6PM at Fade Zone Barbershop
+END:VALARM
+BEGIN:VALARM
+TRIGGER:-PT1H
+ACTION:DISPLAY
+DESCRIPTION:BBQ pickup in 1 hour - don't forget your ticket!
+END:VALARM
+END:VEVENT
+END:VCALENDAR`;
+
+            const blob = new Blob([calendarData], { type: 'text/calendar;charset=utf-8' });
+            const url = window.URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'BBQ-Pickup-Android-Sept20.ics';
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            window.URL.revokeObjectURL(url);
+            
+            setTimeout(() => {
+                alert('Calendar file downloaded! Open the file with Google Calendar app or tap to add to your calendar.');
+            }, 500);
         }
 
         function downloadICS() {
